trying to fix bg img on mobile and desktop

--- a/styles.css
+++ b/styles.css
@@ -350,7 +350,7 @@ body::-webkit-scrollbar-thumb {
   /* background-attachment: fixed; */
   background-size: cover;
   background-repeat: no-repeat;
-  height: calc(var(--vh, 1vh) * 100);
+  height: 100%;
   width: 100%;
   bottom: 0;
   left: 0;
@@ -705,6 +705,11 @@ footer i:hover {
     left: -40px;
     height: calc(100vh - 80px);
   }
+
+  .fixed-img {
+    height: calc(var(--vh, 1vh) * 100);
+  }
+
   .nav {
     font-size: 1rem;
   }
@@ -780,6 +785,11 @@ footer i:hover {
     left: 100px;
     height: calc(100vh + 300px);
   }
+
+  .fixed-img {
+    height: calc(var(--vh, 1vh) * 100);
+  }
+
   .main-menu {
     visibility: hidden;
   }
